src/objects/LG_DecompositionCriteria__c.object
<CustomObject>
    <fields>
        <fullName>LG_AddOnPriceItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add On Price Item</label>
        <referenceTo>cspmb__Add_On_Price_Item__c</referenceTo>
        <relationshipLabel>Decomposition Criteria</relationshipLabel>
        <relationshipName>Decomposition_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_DecompositionCriteria__c</fullName>
        <description>Used as a criteria for grouping the services to the suborders</description>
        <label>Decomposition Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Set 1 - On-Net</fullName>
                </value>
                <value>
                    <fullName>Set 2 - Legacy</fullName>
                </value>
                <value>
                    <fullName>Set 3 - Mobile</fullName>
                </value>
                <value>
                    <fullName>Set 4</fullName>
                </value>
                <value>
                    <fullName>Set 5 - CaMa Internet</fullName>
                </value>
                <value>
                    <fullName>Set 6 - CaMa Dependent</fullName>
                </value>
                <value>
                    <fullName>Set 7 - JIRA Fiber</fullName>
                </value>
                <value>
                    <fullName>Set 8 - CS Voice</fullName>
                </value>
                <value>
                    <fullName>Set 9 - CaMa Bearer</fullName>
                </value>
                <value>
                    <fullName>Set 10 - VoiceWorks</fullName>
                </value>
                <value>
                    <fullName>Set 11 - Engineers</fullName>
                </value>
                <value>
                    <fullName>Set 12 - JIRA Orchestrated</fullName>
                </value>
                <value>
                    <fullName>Set 13 - JIRA Bearer</fullName>
                </value>
                <value>
                    <fullName>Set 14 - CaMa Mobile</fullName>
                </value>
                <value>
                    <fullName>Set 15 - CaMa Manual</fullName>
                </value>
                <value>
                    <fullName>Set 16 - CaMa OI Manual</fullName>
                </value>
                <value>
                    <fullName>Set 17 - Charges</fullName>
                </value>
                <value>
                    <fullName>Set 18 - Direct to Kenan</fullName>
                </value>
                <value>
                    <fullName>Set 19 - Additional Charges</fullName>
                </value>
                <value>
                    <fullName>Set 20 - BDS Site Process</fullName>
                </value>
                <value>
                    <fullName>Set 21 - VPN Process</fullName>
                </value>
                <value>
                    <fullName>Set 22 - Parent/Category Only</fullName>
                </value>
                <value>
                    <fullName>Set 23 - UM CaMa Bridge Mode</fullName>
                </value>
                <value>
                    <fullName>Set 24 - UM JIRA Fiber Bridge Mode</fullName>
                </value>
                <value>
                    <fullName>Set 17 - BDS Charges</fullName>
                </value>
                <value>
                    <fullName>Set 17 - HPBX Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PartnerNeeded__c</fullName>
        <label>Partner Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Decomposition Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LG_DecompositionCriteria__c</columns>
        <columns>LG_AddOnPriceItem__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LG_PartnerNeeded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Decomposition Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decomposition Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>